SONARPHP-1348 Raise warning when coverage or test report file does not contain any record